tests/baselines/reference/functionWithThrowButNoReturn1.errors.txt
==== tests/cases/compiler/functionWithThrowButNoReturn1.ts (1 errors) ====
    function fn(): number {
                   ~~~~~~
!!! error TS2131: Function declared a non-void return type, but has no return expression.
      throw new Error('NYI');
      var t;
    }
    